##===- CMakeLists.txt - ---------------------------------------*- cmake -*-===//
##
## This file is licensed under the MIT License.
## SPDX-License-Identifier: MIT
##
## Copyright (C) 2022, Advanced Micro Devices, Inc.
##
##===----------------------------------------------------------------------===//

add_subdirectory(Connectivity)
add_subdirectory(Conversion)
add_subdirectory(Dialect)
add_subdirectory(Rewrite)
add_subdirectory(Target)
