##===- CMakeLists.txt - ---------------------------------------*- cmake -*-===//
##
## This file is licensed under the MIT License.
## SPDX-License-Identifier: MIT
##
## Copyright (C) 2022, Advanced Micro Devices, Inc.
##
##===----------------------------------------------------------------------===//

add_subdirectory(phy-opt)
add_subdirectory(phy-translate)
